# novatel_oem7_driver

src/novatel_oem7_driver/src/: oem7_message_node.cpp
src/novatel_ros_converter/: CMakeLists.txt  package.xml
src/novatel_ros_converter/launch/: novatel_to_pose_launch.py
src/novatel_ros_converter/src/: main_novatel_to_pose_node.cpp
