<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>novatel_ros_converter</name>
  <version>0.0.1</version>
  <description>ROS converter for novatel</description>
  <maintainer email="tim.stahl@driveblocks.ai">Tim Stahl</maintainer>
  <license>driveblocks proprietary license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>novatel_oem7_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_driveblocks</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
